--- a/DarkDiscord.theme.css
+++ b/DarkDiscord.theme.css
@@ -1,14 +1,13 @@
 /**
 
- * @name Dark Discord
+ * @name ReDark
  * @version 1.0.0
- * @description An actual dark mode for discord.
- * @source https://github.com/localip/dark-discord
- * @authorId 1099841746449485885
- * @author eternal
- * @website https://github.com/localip/dark-discord
- * @donate https://paypal.me/eternal404
+ * @description An actual dark mode for Discord. Created by eternal, revived by KayoticCarnige.
+ * @source https://github.com/kckarnige/dark-discord
+ * @authorId 634168893644210186
+ * @author KayoticCarnige
+ * @website https://github.com/kckarnige/dark-discord
 
 **/
 
-@import url(https://localip.github.io/dark-discord/src/source.css);
+@import url(https://kckarnige.github.io/dark-discord/src/source.css);
