--- a/DarkDiscord.theme.css
+++ b/DarkDiscord.theme.css
@@ -2,7 +2,7 @@
 
  * @name ReDark
  * @version 1.0.0
- * @description An actual dark mode for Discord. Created by eternal, revived by KayoticCarnige.
+ * @description An actual dark mode for Discord. Created by eternal, Forked by KayoticCarnige.
  * @source https://github.com/kckarnige/dark-discord
  * @authorId 634168893644210186
  * @author KayoticCarnige
