--- a/src/original.css
+++ b/src/original.css
@@ -91,8 +91,10 @@
    box-shadow: var(--elevation-high) !important;
 }
 
-.theme-dark .container__10dc7,
-.theme-dark .header__60bef {
+[class*="chat_"]>[class*="header_"][class*="container_"],
+[class*="chat_"]>[class*="content_"][class*="container_"],
+[class*="chat_"]>[class*="content_"]>[class*="chat_"][class*="container_"],
+[class*="chat_"]>[class*="content_"]>[class*="chat_"][class*="scrollerContainer_"] {
    background-color: var(--background-primary);
 }
 .theme-dark [class*="autocomplete_"] {
