--- a/DarkDiscord.theme.css
+++ b/DarkDiscord.theme.css
@@ -1,7 +1,7 @@
 /**
 
  * @name ReDark
- * @version 2.0.0
+ * @version 2.0.1
  * @description An actual dark mode for Discord. Created by eternal, Forked by KayoticCarnige.
  * @source https://github.com/kckarnige/dark-discord
  * @authorId 634168893644210186
@@ -10,4 +10,4 @@
 
 **/
 
-@import url(https://kckarnige.github.io/dark-discord/src/source.css);
+@import url(https://raw.githack.com/kckarnige/dark-discord/main/src/source.css);
