--- a/src/stylus.user.css
+++ b/src/stylus.user.css
@@ -6,5 +6,5 @@
     @namespace    github.com/kckarnige/dark-discord
     @version      2.0.0
     ==/UserStyle== */
-   @import url(https://kckarnige.github.io/dark-discord/src/source.css);
+   @import url(https://raw.githack.com/kckarnige/dark-discord/main/src/source.css);
 }
